--- a/Project_NeoBomberman/Project_NeoBomberman.vcxproj
+++ b/Project_NeoBomberman/Project_NeoBomberman.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{b7b8e826-c93f-485c-85f0-4b6afde99b66}</ProjectGuid>
-    <RootNamespace>EnginePlatform</RootNamespace>
+    <ProjectGuid>{7508d805-7cbe-4039-893b-e9cb21095d88}</ProjectGuid>
+    <RootNamespace>ProjectNeoBomberman</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,10 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Window.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Window.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
