--- a/EnginePlatform/EnginePlatform.vcxproj.filters
+++ b/EnginePlatform/EnginePlatform.vcxproj.filters
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
-    <ClInclude Include="Window.h" />
+<Project ToolsVersion="4.0" xmlns="http:  <ItemGroup>
+    <ClInclude Include="EngineWindow.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Window.cpp" />
+    <ClCompile Include="EngineWindow.cpp" />
   </ItemGroup>
 </Project>
