--- a/EngineBase/EngineBase.vcxproj.filters
+++ b/EngineBase/EngineBase.vcxproj.filters
@@ -10,6 +10,7 @@
     <ClInclude Include="EngineMath.h">
       <Filter>Math</Filter>
     </ClInclude>
+    <ClInclude Include="EngineDelegate.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EngineDebug.cpp">
@@ -21,6 +22,7 @@
     <ClCompile Include="EngineMath.cpp">
       <Filter>Math</Filter>
     </ClCompile>
+    <ClCompile Include="EngineDelegate.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Debug">
