--- a/EngineCore/EngineCore.vcxproj.filters
+++ b/EngineCore/EngineCore.vcxproj.filters
@@ -2,8 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClInclude Include="AActor.h" />
+    <ClInclude Include="EngineAPICore.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AActor.cpp" />
+    <ClCompile Include="EngineAPICore.cpp" />
   </ItemGroup>
 </Project>
