이현정 : UserTick 내용 추가,

--- a/ContentsProject/ContentsProject.vcxproj
+++ b/ContentsProject/ContentsProject.vcxproj
@@ -151,10 +151,12 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="EduContentsCore.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PreCompile.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="EduContentsCore.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PreCompile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
