--- a/ContentsProject/ContentsProject.vcxproj.filters
+++ b/ContentsProject/ContentsProject.vcxproj.filters
@@ -7,6 +7,9 @@
     <Filter Include="PreCompile">
       <UniqueIdentifier>{33249823-3129-4e47-a377-ada836371023}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Core">
+      <UniqueIdentifier>{2f6ba058-48aa-47e6-b7a8-d9dce4090505}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Player.cpp">
@@ -15,6 +18,9 @@
     <ClCompile Include="PreCompile.cpp">
       <Filter>PreCompile</Filter>
     </ClCompile>
+    <ClCompile Include="EduContentsCore.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -22,6 +28,9 @@
     </ClInclude>
     <ClInclude Include="PreCompile.h">
       <Filter>PreCompile</Filter>
+    </ClInclude>
+    <ClInclude Include="EduContentsCore.h">
+      <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
