--- a/EnginePlatform/EnginePlatform.vcxproj.filters
+++ b/EnginePlatform/EnginePlatform.vcxproj.filters
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
+<Project ToolsVersion="4.0" xmlns="http:  <ItemGroup>
     <Filter Include="PreCompile">
       <UniqueIdentifier>{a9155735-ff6f-403b-bf60-aa7cc46cef53}</UniqueIdentifier>
     </Filter>
