--- a/EnginePlatform/EnginePlatform.vcxproj.filters
+++ b/EnginePlatform/EnginePlatform.vcxproj.filters
@@ -1,27 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="PreCompile.cpp">
-      <Filter>PreCompile</Filter>
-    </ClCompile>
-    <ClCompile Include="EngineWindow.cpp">
-      <Filter>Window</Filter>
+    <ClCompile Include="EngineWindow.cpp" />
+    <ClCompile Include="PreCompile.cpp" />
+    <ClCompile Include="EngineInput.cpp">
+      <Filter>Input</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="PreCompile.h">
-      <Filter>PreCompile</Filter>
-    </ClInclude>
-    <ClInclude Include="EngineWindow.h">
-      <Filter>Window</Filter>
+    <ClInclude Include="EngineWindow.h" />
+    <ClInclude Include="PreCompile.h" />
+    <ClInclude Include="EngineInput.h">
+      <Filter>Input</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="PreCompile">
-      <UniqueIdentifier>{0caa590e-1b58-484d-9bf7-50d7e5cfed84}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Window">
-      <UniqueIdentifier>{baf2f8ce-dd60-4d73-bb4e-bc6992a20b88}</UniqueIdentifier>
+    <Filter Include="Input">
+      <UniqueIdentifier>{0b4edeb1-da05-449d-b3d9-168cde1aae6c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
