이현정 : Bomb 수정

--- a/ContentsProject/ContentsProject.vcxproj.filters
+++ b/ContentsProject/ContentsProject.vcxproj.filters
@@ -7,7 +7,7 @@
     <ClCompile Include="PreCompile.cpp">
       <Filter>PreCompile</Filter>
     </ClCompile>
-    <ClCompile Include="EduContentsCore.cpp">
+    <ClCompile Include="BombmanCore.cpp">
       <Filter>Core</Filter>
     </ClCompile>
     <ClCompile Include="EndGameMode.cpp">
@@ -22,7 +22,7 @@
     <ClCompile Include="TitleGameMode.cpp">
       <Filter>ContentsObject\GameMode</Filter>
     </ClCompile>
-    <ClCompile Include="Bullet.cpp">
+    <ClCompile Include="Bomb.cpp">
       <Filter>ContentsObject</Filter>
     </ClCompile>
   </ItemGroup>
@@ -33,7 +33,7 @@
     <ClInclude Include="PreCompile.h">
       <Filter>PreCompile</Filter>
     </ClInclude>
-    <ClInclude Include="EduContentsCore.h">
+    <ClInclude Include="BombmanCore.h">
       <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="EndGameMode.h">
@@ -48,7 +48,7 @@
     <ClInclude Include="TitleGameMode.h">
       <Filter>ContentsObject\GameMode</Filter>
     </ClInclude>
-    <ClInclude Include="Bullet.h">
+    <ClInclude Include="Bomb.h">
       <Filter>ContentsObject</Filter>
     </ClInclude>
   </ItemGroup>
