--- a/EnginePlatform/EnginePlatform.vcxproj
+++ b/EnginePlatform/EnginePlatform.vcxproj
@@ -24,6 +24,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="EngineWindow.h" />
+    <ClInclude Include="EngineWinImage.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="PreCompile.h" />
   </ItemGroup>
   <ItemGroup>
@@ -32,6 +36,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="EngineWindow.cpp" />
+    <ClCompile Include="EngineWinImage.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="PreCompile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
