--- a/EnginePlatform/EnginePlatform.vcxproj
+++ b/EnginePlatform/EnginePlatform.vcxproj
@@ -23,6 +23,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineWinDebug.h" />
     <ClInclude Include="EngineWindow.h" />
     <ClInclude Include="EngineWinImage.h">
       <SubType>
@@ -35,6 +36,7 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="EngineWinDebug.cpp" />
     <ClCompile Include="EngineWindow.cpp" />
     <ClCompile Include="EngineWinImage.cpp">
       <SubType>
