--- a/ContentsProject/ContentsProject.vcxproj
+++ b/ContentsProject/ContentsProject.vcxproj
@@ -151,6 +151,10 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ATileMap.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Bomb.h">
       <SubType>
       </SubType>
@@ -171,6 +175,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="TileMapGameMode.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="TitleLogo.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayGameMode.h">
@@ -188,6 +196,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ATileMap.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Bomb.cpp">
       <SubType>
       </SubType>
@@ -205,6 +217,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Monster.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="TileMapGameMode.cpp">
       <SubType>
       </SubType>
     </ClCompile>
