--- a/EngineBase/EngineBase.vcxproj.filters
+++ b/EngineBase/EngineBase.vcxproj.filters
@@ -31,6 +31,9 @@
     <ClCompile Include="EngineString.cpp">
       <Filter>String</Filter>
     </ClCompile>
+    <ClCompile Include="EngineSerializer.cpp">
+      <Filter>IO</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EngineDebug.h">
@@ -62,6 +65,9 @@
     </ClInclude>
     <ClInclude Include="EngineString.h">
       <Filter>String</Filter>
+    </ClInclude>
+    <ClInclude Include="EngineSerializer.h">
+      <Filter>IO</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
