--- a/EngineBase/EngineBase.vcxproj
+++ b/EngineBase/EngineBase.vcxproj
@@ -163,6 +163,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineRandom.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="EngineSerializer.h">
       <SubType>
       </SubType>
@@ -188,6 +192,10 @@
     <ClCompile Include="EngineFile.cpp" />
     <ClCompile Include="EngineMath.cpp" />
     <ClCompile Include="EnginePath.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="EngineRandom.cpp">
       <SubType>
       </SubType>
     </ClCompile>
