--- a/EngineBase/EngineBase.vcxproj.filters
+++ b/EngineBase/EngineBase.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="EngineSerializer.cpp">
       <Filter>IO</Filter>
     </ClCompile>
+    <ClCompile Include="EngineRandom.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EngineDebug.h">
@@ -68,6 +71,9 @@
     </ClInclude>
     <ClInclude Include="EngineSerializer.h">
       <Filter>IO</Filter>
+    </ClInclude>
+    <ClInclude Include="EngineRandom.h">
+      <Filter>Math</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
