--- a/ContentsProject/ContentsProject.vcxproj
+++ b/ContentsProject/ContentsProject.vcxproj
@@ -163,6 +163,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="ChooseStage.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="ContentsEnum.h">
       <SubType>
       </SubType>
@@ -205,6 +209,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="BombmanCore.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="ChooseStage.cpp">
       <SubType>
       </SubType>
     </ClCompile>
